%%{init: {'theme': 'base', 'themeVariables': { 'primaryColor': '#7aa2f7', 'lineColor': '#a9b1d6'}}}%%
stateDiagram-v2
    [*] --> IDLE: Initialize

    IDLE --> PLANNING: start()

    state "Planning Phase" as PlanningPhase {
        PLANNING --> UNDERSTANDING: Parse request
        UNDERSTANDING --> PLAN_GENERATED: Create plan
        PLAN_GENERATED --> PLAN_APPROVED: User/Auto approve
    }

    state "Decision Phase" as DecisionPhase {
        PLAN_APPROVED --> DECIDING: Evaluate with CLOSE
        DECIDING --> DECISION_MADE: Score > threshold
        DECIDING --> BLOCKED: Score < threshold
    }

    state "Execution Phase" as ExecutionPhase {
        DECISION_MADE --> EXECUTING: Start TDD
        EXECUTING --> TESTING: Run tests
        TESTING --> VERIFYING: Tests pass
        TESTING --> FIXING: Tests fail
        FIXING --> TESTING: Retry
        VERIFYING --> EVALUATING: Quality check
    }

    state "Completion Phase" as CompletionPhase {
        EVALUATING --> SCORING: Calculate scores
        SCORING --> CONTINUING: More work needed
        SCORING --> COMPLETED: All done
        CONTINUING --> PLANNING: Next iteration
    }

    COMPLETED --> [*]: Success

    BLOCKED --> PAUSED: Wait for input
    PAUSED --> PLANNING: resume()

    state "Error States" as ErrorStates {
        FAILED: Session failed
        TERMINATED: Stopped by user
    }

    EXECUTING --> FAILED: Critical error
    PAUSED --> TERMINATED: stop()
    FAILED --> [*]: Cleanup
    TERMINATED --> [*]: Cleanup

    note right of DECIDING
        CLOSE Framework:
        - Convergence
        - Leverage
        - Optionality
        - Surplus
        - Evolution
    end note

    note right of EXECUTING
        TDD Cycle:
        1. Write test (RED)
        2. Implement (GREEN)
        3. Refactor (IMPROVE)
    end note
